--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
       </div>
     </div>
 
+
+    <!-- <form action="newbrand.html" onsubmit="return (validatepwd() && validatemail());"> -->
+    <!-- <form action="newbrand.html" onsubmit="validate()"> -->
+    <form action="newbrand.html" onsubmit="return submitter()">
+      <input type="submit" id="sbmit" value="Submit">
+    </form>
+
+    <script src="script.js"></script>
 </body>
 </html>
